--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Hugo Academic Blog Theme # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://ericboittier@github.io/' # Website URL
+
 
 ############################
 ## PAGE OPTIONS
